# COM

./: .editorconfig  BACKERS.md  CHANGELOG.md  Cargo.toml  PLANNED.md  README.md  bad.asm  good.asm  installer.iss  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
com/: Makefile  README.md  fake_out.asm  hello.asm  resb.asm  test.asm
disassembler/: Cargo.toml  README.md
disassembler/src/: comment.rs  consts.rs  disassemble.rs  label.rs  lib.rs  main.rs  string.rs  syscall.rs
dosdisassm/: Cargo.toml  build.rs
dosdisassm/src/: main.rs
installer/: Cargo.toml  build.rs
installer/src/: args.rs  main.rs  utils.rs
scripts/: make_icons.sh
updater/: Cargo.toml
updater/src/: main.rs
